effective java 方法02

--- a/java/effective java/5.方法.md
+++ b/java/effective java/5.方法.md
@@ -272,3 +272,82 @@ public class A {
      return contentEquals((Charsequence) sb);
  }
  ```
+
+## 慎用可变参数
+
+
+- **可变参数接受0个或者多个指定类型的参数**，**可变参数机制通过先创建一个数组**，数组的大小为在调用位置所传递的参数数量，
+ 然后将参数值传到数组中，**最后将数组传递给方法**
+
+- **如果方法至少需要1个或者多个某些类型的参数，可以将必需的参数与可变参数分开**
+
+```java
+
+static int min (int firstArg, int ... args) {
+    int min = firstArg;
+    for (int arg : args) {
+        if (arg < min) {
+            min = arg;
+        }
+    }
+    return min;
+}
+
+```
+
+- 不必改造具有final数组参数的每个方法，**只有确定是在数量不定的值上执行调用才使用可变参数**
+
+- **可变参数方法的每次调用都会导致进行一次数组的分配和初始化，在重视性能的情况下，可以通过重载具体个数参数的函数来提升性能**
+
+```java
+
+public void foo() {}
+public void foo(int a1) {}
+public void foo(int a1, int a2) {}
+public void foo(int a1, int a2, int a3){}
+public void foo(int a1, int a2, int a3, int ... restArgs){}
+
+```
+
+- 在定义参数数目不定的方法时，可变参数是一种很方便的方法，但是不应当滥用
+
+
+## 返回长度为0的数组或集合，而不是返回null
+
+- 返回null,那么每次调用都要进行null判断，**可能会由于忘记与null对比而在运行时出现错误**
+
+- 对于数组，应当返回长度为0的数组，而长度为0的数组是不可变的数组，可以作为static final不可变对象而被共享
+
+```java
+
+private final List<Cheese> list = ...;
+
+private static final Cheese[] EMPTY_CHEESE_ARRAY = new Cheese[0];
+
+public Cheese[] getCheese() {
+    return list.toArray(EMPTY_CHEESE_ARRAY);
+}
+
+```
+
+- **Collection.toArray(T[]的规范保证：如果输入数组大到足够容纳这个集合，它就将返回这个数组，因此，这种做法永远不会分配**
+ **长度为零的数组**
+
+- 对于list,map,set，**可以返回Collections中的对象Collections.emptySet,Collections.emptyList,Collections.emptyMap**
+
+```java
+
+private Cheese[] array = ...;
+
+public List<Cheese> getCheeseList() {
+    if (array == null || array.length() == 0) {
+        return Collection.emptyList();
+    } else {
+        return Arrays.asList(array);
+    }
+}
+
+```
+
+## 为所有导出的API元素编写文档注释
+
