--- a/java/多线程/01 多线程基础.md
+++ b/java/多线程/01 多线程基础.md
@@ -86,13 +86,46 @@
 
 ## 后台线程
 
-- setDaemon(True)
+- **setDaemon(true)，必须在调用线程的start()方法之前调用**
 - 后台线程是提供一种通用服务的线程，并且这种线程并不属于程序中不可或缺的一部分
 - 当程序的所有非后台线程结束时，程序也就结束了，并且会杀死所有后台线程
 - 只要存在任何非后台线程还在运行，程序就不会张终止
-- 任何后台线程创建的线程都是后台线程
-- 当关闭最后一个非后台线程时，所有的后台线程都会被立即关闭，可能会导致后台线程的部分代码不会执行，如果是非后台线程，则代码一定会执行
+- **任何后台线程创建的线程都是后台线程**
+- **当关闭最后一个非后台线程时，所有的后台线程都会被立即关闭，可能会导致后台线程的部分代码不会执行**，如果是非后台线程，则代码一定会执行
+
+```java
+
+class ADaemon implements Runnable {
+    public void run() {
+        try {
+            print("Starting ADaemon");
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+          print ("Exiting via InterruptedException");
+        } finally {
+            print ("This should always run ?");
+        }
+    }
+
+
+    public class DaemonsDontRunFinally {
+        public static void main(String[] args) throws Exception {
+            Thread t = new Thread(new ADaemon());
+            t.setDaemon(true);
+            t.start();
+        }
+    }
+}
+
+// output
+// Starting ADaemon
+// 其它的不会执行的
+
+
+```
+
 - 非后台的Executor是一种更好的方式，它可以控制所有任务可以同时被关闭
+
 
 ## 异常
 
@@ -134,6 +167,25 @@ class HandlerThreadFactory implements ThreadFactory {
  所有的任务将使用相同的线程。因些它会序列化所有提交给它的任务，并会维护它自己的悬挂任务队列。
 - SingleThreadExecutor上，由于是在同一线程，经常不需要在共享资源上作同步。
 
+
+## ThreadFactory
+
+- 每个ExecutorService的创建方法都被重载为接受一个ThreadFactory对象，而这个对象被用来创建对象
+
+```java
+
+public class DaemonThreadFactory implements ThreadFactory {
+        public Thread newThread(Runnable r) {
+              Thread t = new Thread();
+              t.setDaemon(true);
+              return t;
+        }
+}
+
+ExecutorService exec = Executors.newCachedThreadPool(new DaemonThreadFactory());
+
+```
+
 ## 从任务中返回值
 
 - Runnable执行独立的任务，但不返回值，如果要返回值，使用Callable
@@ -159,6 +211,7 @@ for(int i = 0; i < 10; ++i) {
   list.add(exec.submit(new Task(i)));
 }
 ```
+
 
 ## 解决共享资源兑争
 
