--- a/java/多线程/01 多线程基础.md
+++ b/java/多线程/01 多线程基础.md
@@ -81,7 +81,7 @@
 
 ## 线程 join()
 
-- a线程的run中调用b.join()，a会被挂起，直到线程b结束才恢复（也就是b.isAlive（）为假）
+- **a线程的run中调用b.join()，a会被挂起，直到线程b结束才恢复（也就是b.isAlive（）为假）**
 - 在一个线程上调用interrupt()时，将给该线程一个标志，表明该线程已经被中断，但是如果捕获了这个异常，则这个标志会被清除
 
 ## 后台线程
@@ -129,10 +129,11 @@ class ADaemon implements Runnable {
 
 ## 异常
 
-- 由于线程的本质特性，不能捕获从线程中逃逸出来的异常
+- **由于线程的本质特性，不能捕获从线程中逃逸出来的异常**
 - 使用Thread.UncaughtExceptionHandler
-- 还可以在Thread类中设置一个静态域，当线程不存在特有UncaughtExceptionHandler版本的，
- 并且也没有线程组专有UncaughtExceptionHandler的时候，就会使用defaultUncaughtExceptionHandler
+- UncaughtExceptionHandler主要分为3类：**Thread特有的，它所属线程组特有的，和所有Thread共有的DefaultUncaughtExceptionHandler**
+- **还可以在Thread类中设置一个静态域，当线程不存在特有UncaughtExceptionHandler版本的，**
+ **并且也没有线程组专有UncaughtExceptionHandler的时候，就会使用defaultUncaughtExceptionHandler**
  Thread.setDefaultUncaughtExceptionHandler(new MyUncaughtExceptionHandler());
 
 ```java
@@ -213,29 +214,168 @@ for(int i = 0; i < 10; ++i) {
 ```
 
 
-## 解决共享资源兑争
+## 解决共享资源兑争(互斥性)
 
-- 对于并发工作，需要某种方式来防止两个任务访问相同的资源，防止这种冲突的方法就是当资源被一个任务使用时，在其上加锁
+- **对于并发工作，需要某种方式来防止两个任务访问相同的资源**，至少在关键时刻不能这样，**防止这种冲突的方法就是当资源被一个任务使用时，在其上加锁**
+- **基本上所有的并发模式在解决线程冲突问题的时候，都是采用序列化访问共享资源的方案，这意味着在给定时刻只允许一个任务访问共享资源**
 - java中，要控制对共享资源的访问，首先得把它包装进一个对象，然后把所有要访问这个资源的方法标记为synchronized
  使用并发时，必须将值设为private
 
 ## 同步与锁
 
-- 只能同步方法，而不能同步变量和类；
-- 每个对象只有一个锁；当提到同步时，应该清楚在什么上同步？也就是说，在哪个对象上同步？
-- 不必同步类中所有的方法，类可以同时拥有同步和非同步方法。
-- 对于某个对象来说，所有synchronized方法共享一个锁,如果某个任务处于一个对标记为synchronized的方法调用中，
+### 同步
+
+- 当提到同步时，应该清楚在什么上同步？也就是说，在哪个对象上同步？
+- 不必同步类中所有的方法，**类可以同时拥有同步和非同步方法**，如果线程拥有同步和非同步方法，则非同步方法可以被多个线程自由访问而不受锁的限制。
+
+
+### synchronized 与锁
+
+- **使用并发时，必须将要保护的成员对象设置为private**
+- **synchronized 只能同步方法和代码块**，不能同步变量和类
+- **所有对象都自动含有单一的锁，在对象上调用任何 synchronized方法，对象会被加锁**
+- **一个任务可以获得多个对象的锁**, 在一个对象的同步方法里面调用另外一个对象的同步方法，则获取了两个对象的同步锁。
+- **一个任务也可以多次获得对象的锁**，比如在一个对象的synchronized方法里面调用这个对象的另一个synchronized汶法，那么每调用一次都会加锁一次，
+ jvm会追踪加锁的次数，退出一个synchronized方法或代码块，加锁次数减1，当变为0时，释放对象的锁
+- **对于某个对象来说，其所有非static synchronized方法共享一个锁**,如果某个任务处于一个对标记为synchronized的方法调用中，
  那么在这个线程从该方法返回之前，其它所有要调用类中任何标记为synchronized方法的线程都会被堵塞
-- 如果线程拥有同步和非同步方法，则非同步方法可以被多个线程自由访问而不受锁的限制。
-- 线程睡眠时，它所持的任何锁都不会释放。
-- 线程可以获得多个锁。比如，在一个对象的同步方法里面调用另外一个对象的同步方法，则获取了两个对象的同步锁。
-- 同步损害并发性，应该尽可能缩小同步范围。同步不但可以同步整个方法，还可以同步方法中一部分代码块。
- 在使用同步代码块时候，应该指定在哪个对象上同步，也就是说要获取哪个对象的锁
-- 针对每个类，也有一个锁，也就是class对象，所有synchronized static方法可以在类的范围内防止对static数据据的并发访问
-- Brian同步原则：如果你正在写一个变量，它可能接下来被另一个线程读取，或者正在读取一个上一次已经被另一个线程写过的变量，那么你必须使用同步，并且，读写线程必须用   相同的监视器锁同步
-- 每一个访问临界共享资源的方法都必须同步，否则它们就不会正常工作
-- java中可以使用synchronize关键字，也可以使用显示的Lock对象
- 编写线程安全的类，需要时刻注意对多个线程竞争访问资源的逻辑和安全做出正确的判断，对“原子”操作做出分析，并保证原子操作期间别的线程无法访问竞争资源
+- 每一个类也有一个锁，作为class对象的一部分，所以**synchronized static方法可以在类的范围内防止对static数据的并发访问**
+
+```java
+// 下面两个效果相同
+class A {
+    public static synchronized void staticMethod() {
+         //
+    }
+
+    public static void staticMethod() {
+        synchronized(A.class) {
+            //...
+        }
+    }
+}
+
+```
+
+### 共享资源
+
+>> Brian同步原则：如果你正在写一个变量，它可能接下来被另一个线程读取，或者正在读取一个上一次已经被另一个线程写过的变量，那么你必须使用同步，并且，读写线程必须用相同的监视器锁同步
+
+- **同步损害并发性，应该尽可能缩小同步范围**。
+- **同步不但可以同步整个方法，还可以同步方法中一部分代码块**。
+- **在使用同步代码块时候，应该指定在哪个对象上同步，也就是说要获取哪个对象的锁**
+
+```java
+// 下面两个效果相同
+class A {
+    public synchronized void someThing() {
+         //
+    }
+
+    public  void someThing() {
+        synchronized(this) {
+            //...
+        }
+    }
+}
+```
+
+- **每一个访问临界共享资源的方法都必须同步，否则它们就不会正常工作**
+- **线程睡眠时，它所持的任何锁都不会释放**。
+- 编写线程安全的类，需要时刻注意对多个线程竞争访问资源的逻辑和安全做出正确的判断，对“原子”操作做出分析，并保证原子操作期间别的线程无法访问竞争资源
+
+### 显示的lock对象
+
+- 显示的lock对象一般和try finally合在一起用，并且一定要在finally中unlock
+- 如果失败可以抛出异常，也可以在finally中清理对象
+
+``` java
+
+public class A {
+    private final Lock lock = new ReentrantLock();
+
+    private int value = 0;
+
+    public int next() {
+        lock.lock();
+        try {
+            ++value;
+            Thread.yield();
+            ++value;
+            return value;
+        } finally {
+            lock.unlock();
+        }
+    }
+}
+
+```
+
+## 原子性与可见性
+
+### 原子性
+
+- **原子操作是不能被线程调度机制中断的操作，一旦操作完成，那么它一定可以在可能发生的“上下文切换“（切换到其它线程）之前执行完毕**
+- **原子性可以应用于除了long与double之外的所有基本类型之上的读写操作**，可以保证它们会被当作不可分的操作来操作内存
+- long,与double因为是64位，读取和写入被当作两个分离的32位操作来执行，从而可能在一个读取与写入之间发生上下文切换，处于不正确的状态
+- **将long和double定义为volatile,就会获得简单的返回与赋值的原子性**
+- **尝试用原子性来代替同步是一种不成熟的优化**，并且会给你招致大量的麻烦
+
+### 可见性 与Volatile
+
+- 在多处理器的系统中，**可见性的问题比原子性的问题更加严重**
+- **一个任务做出的修改，即使在不中断的意义上讲是原子性的，对其它任务也有可能是不可见的**，有可能修改只是暂时性地存储在本地处理器的缓存中，
+ 没有刷新到主存中，造成可能对于其它线程是不可见的
+- **没有同步机制，可视性无法确定**
+
+### Volatile
+
+- **volatile关键字，确保了应用中的可见性，如果将一个域声明为violatile,那么只要对这个域产生了写操作，那么所有的读操作都可以看到这个修改,**
+ 即使有本地缓存，情况也是如此，volatile域被立即写到主存中，而读取操作就是发生在主存的
+- **在非volatile域上的原子操作不必刷新到主存中，因此其它读取该域的任务也不一定看到这个新值，没有保证可视性**
+- **如果多个任务在同时访问这个域，那么这个域就应当是volatie的，否则，这个域就应当只能经由同步的来访问，也就是任何读写这个域的方法应当被synchronized保护**
+- **如果一个域完全由synchronized方法和语句块来防护，那么这个域不必声明为volatile**
+- **一个任务所作的任何写入操作对这个任务都是可见的,如果它只需要这个任务内部可见,那么它不必设置为volatile**
+- **Volatile 但是本身却不能保证原子性与互斥性**
+- **如果一个域的值依赖于它之前的值（例如一个递增计数器），volatile它就无法工作了**
+
+```java
+
+// volatile保证了可见性，但是由于自增操作不是原子性的，所有这个类不是线程安全的
+public class SerialNumberGenerator {
+    public static volatile int serialNumber = 0;
+
+    public static int next() {
+        return serialNumber++;
+    }
+}
+
+```
+
+- **如果某个域的值受到其它域的限制，比如Range的lower必须满足lower<= upper，volatile它就无法工作了**
+- **使用volatile而不是synchronized的唯一安全的哪个情况是类中只有一个可变的域**
+- **如果一个域可能会被多个任务同时访问，或者这些任务中至少有一个是写入任务，那么就应当将这个域设置为volatile的**
+
+### 原子类
+
+- 原子类，AtomicInteger, AtomicLong, AtomicReference等
+- 只有在特殊的情况下，才使用原子类，**一般情况下依赖于锁，synchronized或显式的lock对象更安全**
+
+```java
+
+// 在多线程中使用没有同步的eventIncrement也不会出现问题
+public class AtomicIntegerTest implements Runnable {
+    private AtomicInteger i =  new AtomicInteger(0);
+
+   public int getValue() {return i.get();}
+
+   public void eventIncrement() { i.addAndGet(2);}
+
+   public void run() {
+       //....
+   }
+}
+```
 
 ## 线程阻塞
 
@@ -244,13 +384,7 @@ for(int i = 0; i < 10; ++i) {
 - 静态同步方法和非静态同步方法将永远不会彼此阻塞，因为静态方法锁定在Class对象上，非静态方法锁定在该类的对象上。
 - 对于同步代码块，要看清楚什么对象已经用于锁定（synchronized后面括号的内容）。在同一个对象上进行同步的线程将彼此阻塞，在不同对象上锁定的线程将永远不会彼此阻塞。
 
-## 原子性与可见性
 
-- 原子操作是不能被线程调度机制中断的操作，一旦操作完成，那么它一定可以在可能发生的“上下文切换“之前执行完毕
-- 原子性可以应用于除了long与double之外的所有基本类型之上的简单操作（long,与double因为是64位，因而是先低32位，后高32位操作，可能处于中间状态）
-- 一个任务做出的修改，即使在不中断的意义上讲是原子性的，有可能该变后，只是暂时性地存储在本地处理器的缓存中，没有刷新到主存中，造成可能对于其它线程是不可见的
-- violatile关键字，确保了应用中的可见性，但是本身却不能保证原子性与互斥性
-- 原子类，AtomicInteger, AtomicLong, AtomicReference等
 
 ## 临界区
 
