--- a/java/effective java/2.对象通用方法.md
+++ b/java/effective java/2.对象通用方法.md
@@ -35,7 +35,7 @@
 - 一致性，对于非null的x,y,只要在equals()方法中所用到的对象信息没有发生变化，那么x.equals(y)的结果就应当不变
  也就是说equals的判断中所用的值域不要使用不可靠的资源
 - 非空性，对于非null的x,x.equals(null)一定为false
-- **最好情况下通过继承来重写equals,而是通过组合产生新来对象，来重写equals方法**
+- **最好不要通过继承来重写equals,而是通过组合产生新来对象，来重写equals方法**
 - 一般情况下，自反性和非空性都比较好满足，所以比较重要的就是对称，传递和一致性
 
 ### 注意点
@@ -69,6 +69,7 @@ public class Test {
         return count == other.count && (a == other.a || (a != null && a.equals(other.a));
     }
 
+    @Override
     public int hashCode() {
         //....
     }
