--- a/java/多线程/01 多线程基础.md
+++ b/java/多线程/01 多线程基础.md
@@ -8,14 +8,22 @@
 - [后台线程](#后台线程)
 - [异常](#异常)
 - [使用Executor管理thread对象](#使用executor管理thread对象)
+- [ThreadFactory](#threadfactory)
 - [从任务中返回值](#从任务中返回值)
-- [解决共享资源兑争](#解决共享资源兑争)
+- [解决共享资源兑争(互斥性)](#解决共享资源兑争互斥性)
 - [同步与锁](#同步与锁)
-- [线程阻塞](#线程阻塞)
+    - [同步](#同步)
+    - [synchronized 与锁](#synchronized-与锁)
+    - [共享资源](#共享资源)
+    - [显示的lock对象](#显示的lock对象)
 - [原子性与可见性](#原子性与可见性)
+    - [原子性](#原子性)
+    - [可见性 与Volatile](#可见性-与volatile)
+    - [Volatile](#volatile)
+    - [原子类](#原子类)
 - [临界区](#临界区)
-- [在其它对象上同步](#在其它对象上同步)
 - [ThreadLocal](#threadlocal)
+- [线程阻塞](#线程阻塞)
 
 
 - 进程是运行在它自己的地址空间内的自包容程序
@@ -25,23 +33,23 @@
 
 - 线程状态简图
 
-![线程状态](../../image-resources/thread_status.png)
+![线程状态](../../image-resources/java_thread_states.png)
 
-- **新状态**：线程对象已经创建，还没有在其上调用start()方法。
+- **新状态**：线程对象已经创建，它只会短暂的处于这种状态，已经分配了资源，并执行了必要的初始化，线程已经有资格获得cpu
+ 的时间，之后调度器将把线程变为可运行状态或者阻塞状态。
 
-- **可运行状态**：当线程有资格运行，但调度程序还没有把它选定为运行线程时线程所处的状态。当start() 方法调用时，线程首先进入可运行状态。在线程运行之后或者从阻塞、等待或睡眠状态回来后，也返回到可 运行状态。
+- **可运行状态**：这种状态下，只要调度器把时间分配给线程，线程就可以运行，所以**任何时刻，线程可以在运行也可以没有在运行**。当start() 方法调用时，线程首先进入可运行状态。在线程运行之后或者从阻塞、等待或睡眠状态回来后，也返回到可运行状态。
 
-- **运行状态**：线程调度程序从可运行池中选择一个线程作为当前线程时线程所处的状态。这也是线程进入运行状态的唯一一种方式。
- 等待/阻塞/睡眠状态：这是线程有资格运行时它所处的状态。实际上这个三状态组合为一种，其共同点是：线程仍旧是活的，但是当前没有条件运行。换句话说，它是可运行的，但是如果某件事件出现，他可能返回到可运行状态。
+- **阻塞**：线程可以运行，但是有某个条件阻止了它运行，当线程处于阻塞状态，调度器将忽略线程，不会分配给线程任何cpu时间，
+ 直到线程重新进入就绪状态，它才有可能执行操作
 
-- **死亡态**：当线程的run()方法完成时就认为它死去。这个线程对象也许是活的，但是，它已经不是一个单独执行的线程。线程一旦死亡，就不能复生.如果在一个死去的线程上调用start()方法，会抛出java.lang.IllegalThreadStateException异常。
+- **死亡态**：处于死亡或者终止状态的线程不再是可以被调度的，也不会再得到cpu时间，它的作务已经经结束，或者不再是可以运行的。作务死亡的通常情况是run()方法执行完成，但是任务的线程还可以被中断。这个线程对象也许是活的，但是，它已经不是一个单独执行的线程。线程一旦死亡，就不能复生.如果在一个死去的线程上调用start()方法，会抛出java.lang.IllegalThreadStateException异常。
 
-- **使线程离开运行状态的方法**：
-    - 调用Thread.sleep()：使当前线程至少睡眠这个时间（尽管它可能在指定的时间之前被中断）;
-    - 调用Thread.yield()：不能保障太多事情，尽管通常它会让当前运行线程回到可运行性状态，使得有相同优先级的线程有机会执行;
+- **使线程进入阻塞状态的方法**：
+    - 调用Thread.sleep()： 使线程进入休眠状态，任务在指定时间内不会运行，**不释放锁**;
+    - 调用Thread.yield()：不能保障太多事情，尽管通常它会让当前运行线程回到可运行性状态，使得有相同优先级的线程有机会执行，**不释放锁**
     - 调用join()方法：保证当前线程停止执行，直到该线程所加入的线程完成为止。然而，如果它加入的线程没有存活，则当前线程不需要停止;
-    - 线程的run()方法完成;
-    - 在对象上调用wait()方法（不是在线程上调用）;
+    - 在对象上调用wait()方法，**释放锁**，使当前线程挂起，直到线程得到了notify或都notifyAll的消息;
     - 线程不能在对象上获得锁定，它正试图运行该对象的方法代码;、
     - 线程调度程序可以决定将当前运行状态移动到可运行状态，以便让另一个线程获得运行机会，而不需要任何理由
 
@@ -377,25 +385,41 @@ public class AtomicIntegerTest implements Runnable {
 }
 ```
 
-## 线程阻塞
-
-- 调用同一个对象中非静态同步方法的线程将彼此阻塞。如果是不同对象，则每个线程有自己的对象的锁，线程间彼此互不干预。
-- 调用同一个类中的静态同步方法的线程将彼此阻塞，它们都是锁定在相同的Class对象上。
-- 静态同步方法和非静态同步方法将永远不会彼此阻塞，因为静态方法锁定在Class对象上，非静态方法锁定在该类的对象上。
-- 对于同步代码块，要看清楚什么对象已经用于锁定（synchronized后面括号的内容）。在同一个对象上进行同步的线程将彼此阻塞，在不同对象上锁定的线程将永远不会彼此阻塞。
-
-
-
 ## 临界区
 
 - 希望防止多个线程同时访问方法内部的部分代码而不是防止访问整个方法，通过这种方法分离出来的代码段被称为临界区
-- 也就是在方法内部使用synchronized
-
-## 在其它对象上同步
-
-- synchronized必须给定一个在其上进行同步的对象，其中最合理的方式是，使用其方法正在被调用的当前对象，synchronized非静态方法就是这样
+- synchronized必须给定一个在其上进行同步的对象，其中最合理的方式是，使用其方法正在被调用的当前对象(this)，synchronized非静态方法就是这样
 - 有时如果要在另一个对象上同步，则必须保证所有相关的作务都是在一个对象上同步
 - synchronized(this)与synchronized当前对象内部的一个对象，两者不会因为对另一个方法的调用而互相阻塞
+- 使用临界区必须明确在哪个对象上加锁，也就是synchronized哪个对象
+
+```java
+
+// 下面例子中，f与g互斥，因为两者都要获得对象的锁
+// f与h，g与h可以同时被不同线程访问，两者加锁的对象是不同的
+public class A {
+    private final Object lock = new Object();
+
+    public synchronized void f () {
+        //....
+    }
+
+    public void g() {
+        synchronized(this) {
+            //...
+        }
+    }
+
+    public void h() {
+        synchronized(lock) {
+            //...
+        }
+    }
+
+
+}
+
+```
 
 ## ThreadLocal
 
@@ -403,25 +427,10 @@ public class AtomicIntegerTest implements Runnable {
 - ThreadLocal,为使用相同变量的每个不同线程都创建不同的存储
 
 
+## 线程阻塞
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- 调用同一个对象中非静态同步方法的线程将彼此阻塞。如果是不同对象，则每个线程有自己的对象的锁，线程间彼此互不干预。
+- 调用同一个类中的静态同步方法的线程将彼此阻塞，它们都是锁定在相同的Class对象上。
+- 静态同步方法和非静态同步方法将永远不会彼此阻塞，因为静态方法锁定在Class对象上，非静态方法锁定在该类的对象上。
+- 对于同步代码块，要看清楚什么对象已经用于锁定（synchronized后面括号的内容）。在同一个对象上进行同步的线程将彼此阻塞，在不同对象上锁定的线程将永远不会彼此阻塞。
 
