--- a/java/effective java/4.枚举.md
+++ b/java/effective java/4.枚举.md
@@ -24,13 +24,12 @@
 
 ### 枚举与int常量比较
 
-- **增加或者重新排列枚举类型中的常量**，无需重新编译它的客户端代码，它考虑到了枚举类型的二进制兼容性
+- **增加或者重新排列枚举类型中的桥举常量，无需重新编译它的客户端代码**，它考虑到了枚举类型的二进制兼容性
 - 枚举相比较于int常量更加的耗性能
 
 ### 成员变量与成员方法
 
-- 为了将数据与枚举常量关联起来，在枚举类中**声明成员变量**，因为枚举是不可变的，所以**成员变量应当为final**的，
- 然后**通过私有构造将数据保存在成员变量中**
+- 为了将数据与枚举常量关联起来，在枚举类中**声明成员变量**，因为枚举是不可变的，所以**成员变量应当为final**的，然后**通过私有构造函数将数据保存在成员变量中**
 - 在枚举类型定义成员变量与成员函数注意点：
     - **必须先定义枚举常量**
     - **枚举常量与枚举常量之间用逗号，最后一个枚举常量后面必须加分号**
@@ -186,13 +185,15 @@ public class Text {
 
 ```java
 public class Herb {
-    public enum Type { ANNUAL, FERENNIAL, BIENNIAL}
+   public enum Type { ANNUAL, FERENNIAL, BIENNIAL}
+
+   private Type type;
 
    Herb[] garden = ...;
 
    Set<Herb>[] herbsByType = (Set<Herb>) new Set[Herb.Type.values().length()];
 
-   for (int i = 0; i M herbsByType.length; ++i) {
+   for (int i = 0; i < herbsByType.length; ++i) {
        herbsByType[i] = new HashSet<>();
    }
 
@@ -217,7 +218,7 @@ public enum Phase {
         private final Phase src;
         private final Phase dst;
 
-        Transition(phase src, Phase dst) {
+        Transition(Phase src, Phase dst) {
             this.src = src;
             this.dst = dst;
         }
@@ -226,7 +227,7 @@ public enum Phase {
 
         static {
             for (Phase p : Phase.values()) {
-                m.put(p, new EnumMap<PHase, Transiton>(Phase.class));
+                m.put(p, new EnumMap<Phase, Transiton>(Phase.class));
             }
 
             for (Transition trans : Transition.values()) {
@@ -275,6 +276,7 @@ public interface Food {
     MINUS("-") { double apply (double x, double y) {return x - y;}},
     TIMES("*") { double apply (double x, double y) {return x * y;}},
     DIVIDE("/") { double apply (double x, double y) {return x / y;}};
+
     private final String symbol;
 
     private Operation(String symbol) {
@@ -288,8 +290,9 @@ public interface Food {
 }
 
  public enum ExtendedOperation implements Operation{
-    EX[("^") { double apply (double x, double y) {return Math.pow(x, y;}},
-    RE,AOMDER("%") { double apply (double x, double y) {return x % y;}};
+    EX("^") { double apply (double x, double y) {return Math.pow(x, y;}},
+
+    REAOMDER("%") { double apply (double x, double y) {return x % y;}};
 
     private final String symbol;
 
@@ -316,9 +319,6 @@ public static void main(String[] args) {
     test (BasicOperation.class, x, y);
     test(ExtendedOperation.class, x, y );
 }
-
-
-
 
  ```
 
