--- a/java/多线程/01 多线程基础.md
+++ b/java/多线程/01 多线程基础.md
@@ -434,3 +434,84 @@ public class A {
 - 静态同步方法和非静态同步方法将永远不会彼此阻塞，因为静态方法锁定在Class对象上，非静态方法锁定在该类的对象上。
 - 对于同步代码块，要看清楚什么对象已经用于锁定（synchronized后面括号的内容）。在同一个对象上进行同步的线程将彼此阻塞，在不同对象上锁定的线程将永远不会彼此阻塞。
 
+## 中断
+
+>> 没有任何语言方面的需求要求一个被中断的程序应该终止。中断一个线程只是为了引起该线程的注意，被中断线程可以决定如何应对中断
+
+- **线程中断，并不是让线程停止执行**
+- 在java中,**线程的中断(interrupt)只是改变了线程的中断状态,至于这个中断状态改变后带来的结果,那是无法确定的,必须由程序的调用者去处理**
+ 有时它更是让停止中的线程继续执行的唯一手段.不但不是让线程停止运行,反而是继续执行线程的手段.
+- ExecutorService的shutdownNow将向所有由ExecutorService启动的任务发送interrupt
+
+### 中断相关的函数
+
+```java
+
+ public void interrupt();
+
+ public native boolean isInterrupted();
+
+  public static native boolean interrupted();
+
+```
+
+- **interrupt()**:设置线程的中断状态为true, 并不会导致线程停止运行
+- **isInterrupted()**:返回线程是否中断了
+- **interrupted()**：返回线程的上次的中断状态，**并清除中断状态**
+
+### 处理中断
+
+- 如果我们没有处理中断,那么对线程调用中断,将没有任何的用处,
+ 比如对A所在的线程调用interrupt，没有任何的作用，只有一个置位为中断状态的作用
+ 但是如果我们对于B调用interrrupt，由于线程一直在轮询是否中断，所以如果中断了，那么程序会跳出循环
+
+```java
+
+public class A implements Runnable {
+
+    @Override
+    public void run() {
+        // do something
+    }
+}
+
+public class B implements Runnable {
+     @Override
+    public void run() {
+       while (!Thread.isInterrupted()) {
+            // do something
+       }
+    }
+}
+
+```
+
+### join wait sleep与中断
+
+- 如果一个线程被调用了interrupt()后,它的状态是已中断的.这个状态对于正在执行wait,join,sleep的线程,改变了线程的运行结果.
+
+#### wait 与interrupt
+
+- 对于wait中等待notify/notifyAll唤醒的线程,其实这个线程已经"暂停"执行,因为它正在某一对象的休息室中,这时如果它的中断状态被改变,那么它就会抛出异常.
+ 这个InterruptedException异常不是线程抛出的,而是wait方法,也就是对象的wait方法内部会不断检查在此对象上休息的线程的状态,如果发现哪个线程的状态被置为已中断,
+则会抛出InterruptedException,意思就是这个线程不能再等待了,其意义就等同于唤醒它了.
+
+- 这里唯一的区别是,被notify/notifyAll唤醒的线程会继续执行wait下面的语句,而在wait中被中断的线程则将控制权交给了catch语句.一些正常的逻辑要被放到catch中来运行.
+ 但有时这是唯一手段,比如一个线程a在某一对象b的wait中等待唤醒,其它线程必须获取到对象b的监视锁才能调用b.notify()否则你就无法唤醒线程a,但在任何线程中可以无条件地调用a.interrupt()来达到这个目的.
+ 只是唤醒后的逻辑你要放在catch中,当然同notify/notifyAll一样,继续执行a线程的条件还是要等拿到b对象的监视锁.
+
+#### sleep 与 interrupt
+
+- 对于sleep中的线程,如果你调用了Thread.sleep(一年);现在你后悔了,想让它早些醒过来,调用interrupt()方法就是唯一手段,
+ 只有改变它的中断状态,让它从sleep中将控制权转到处理异常的catch语句中,然后再由catch中的处理转换到正常的逻辑.
+ 同样,地于join中的线程你也可以这样处理.
+
+#### 总结
+
+- 在已经调用join/wait/sleep这三个方法的线程上调用interrupt()方法,可以让线程从"暂停"状态中恢复过来.这个恢复过来就可以包含两个目的:
+    - **[可以使线程继续执行]**,那就是在catch语句中执行醒来后的逻辑,或由catch语句转回正常的逻辑.总之它是从wait,sleep,join的暂停状态活过来了.
+    - **[可以直接停止线程的运行]**,当然在catch中什么也不处理,或return,那么就完成了当前线程的使命,可以使在上面"暂停"的状态中立即真正的"停止".
+
+
+
+
