--- a/java/多线程/03 线程协作.md
+++ b/java/多线程/03 线程协作.md
@@ -81,3 +81,391 @@ synchronized(x) {
 
 
 ## 生产者-消费者模型
+
+### 常规的使用wait,notify, notifyAll
+
+```java
+
+class Car {
+  private boolean waxOn = false;
+  public synchronized void waxed() {
+    waxOn = true; // Ready to buff
+    notifyAll();
+  }
+  public synchronized void buffed() {
+    waxOn = false; // Ready for another coat of wax
+    notifyAll();
+  }
+  public synchronized void waitForWaxing()
+  throws InterruptedException {
+    while(waxOn == false)
+      wait();
+  }
+  public synchronized void waitForBuffing()
+  throws InterruptedException {
+    while(waxOn == true)
+      wait();
+  }
+}
+
+class WaxOn implements Runnable {
+  private Car car;
+  public WaxOn(Car c) { car = c; }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        printnb("Wax On! ");
+        TimeUnit.MILLISECONDS.sleep(200);
+        car.waxed();
+        car.waitForBuffing();
+      }
+    } catch(InterruptedException e) {
+      print("Exiting via interrupt");
+    }
+    print("Ending Wax On task");
+  }
+}
+
+class WaxOff implements Runnable {
+  private Car car;
+  public WaxOff(Car c) { car = c; }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        car.waitForWaxing();
+        printnb("Wax Off! ");
+        TimeUnit.MILLISECONDS.sleep(200);
+        car.buffed();
+      }
+    } catch(InterruptedException e) {
+      print("Exiting via interrupt");
+    }
+    print("Ending Wax Off task");
+  }
+}
+
+public class WaxOMatic {
+  public static void main(String[] args) throws Exception {
+    Car car = new Car();
+    ExecutorService exec = Executors.newCachedThreadPool();
+    exec.execute(new WaxOff(car));
+    exec.execute(new WaxOn(car));
+    TimeUnit.SECONDS.sleep(5); // Run for a while...
+    exec.shutdownNow(); // Interrupt all tasks
+  }
+}
+
+```
+
+### 使用Lock和Condition
+
+- 使用显示的Lock与Condition对象，使用互斥并允许挂起的基本类是Condition
+- 可以通过在Condition上调用await()来挂起一个任务，
+- 通过signal()或者signalAll()来唤醒一个任务
+- 每个Lock对象必须包含显示的try-finally，用来保证在所有的情况都可以释放对象的锁
+- 如果想要调用await和signal或signalAll必须拥有对象的锁
+
+```java
+
+class Car {
+  private Lock lock = new ReentrantLock();
+  private Condition condition = lock.newCondition();
+  private boolean waxOn = false;
+  public void waxed() {
+    lock.lock();
+    try {
+      waxOn = true; // Ready to buff
+      condition.signalAll();
+    } finally {
+      lock.unlock();
+    }
+  }
+  public void buffed() {
+    lock.lock();
+    try {
+      waxOn = false; // Ready for another coat of wax
+      condition.signalAll();
+    } finally {
+      lock.unlock();
+    }
+  }
+  public void waitForWaxing() throws InterruptedException {
+    lock.lock();
+    try {
+      while(waxOn == false)
+        condition.await();
+    } finally {
+      lock.unlock();
+    }
+  }
+  public void waitForBuffing() throws InterruptedException{
+    lock.lock();
+    try {
+      while(waxOn == true)
+        condition.await();
+    } finally {
+      lock.unlock();
+    }
+  }
+}
+
+class WaxOn implements Runnable {
+  private Car car;
+  public WaxOn(Car c) { car = c; }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        printnb("Wax On! ");
+        TimeUnit.MILLISECONDS.sleep(200);
+        car.waxed();
+        car.waitForBuffing();
+      }
+    } catch(InterruptedException e) {
+      print("Exiting via interrupt");
+    }
+    print("Ending Wax On task");
+  }
+}
+
+class WaxOff implements Runnable {
+  private Car car;
+  public WaxOff(Car c) { car = c; }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        car.waitForWaxing();
+        printnb("Wax Off! ");
+        TimeUnit.MILLISECONDS.sleep(200);
+        car.buffed();
+      }
+    } catch(InterruptedException e) {
+      print("Exiting via interrupt");
+    }
+    print("Ending Wax Off task");
+  }
+}
+
+public class WaxOMatic2 {
+  public static void main(String[] args) throws Exception {
+    Car car = new Car();
+    ExecutorService exec = Executors.newCachedThreadPool();
+    exec.execute(new WaxOff(car));
+    exec.execute(new WaxOn(car));
+    TimeUnit.SECONDS.sleep(5);
+    exec.shutdownNow();
+  }
+}
+
+```
+
+### 生产者-消费者与队列
+
+#### BlockingQueue
+
+- 可以使用同步队列来解决解决任务的协作问题
+- **同步对列在任何时刻都只允许一个任务插入或移除元素**
+- **同步队列的实现都是线程安全的**，不必为插入和移除元素再次使用同步
+- **从同步队列中取数据，当数据不存在时，会阻塞获对象的线程**
+- 使用同步队列时我们只用操作队列，而不用操心线程的wait与notify
+
+#### BlockingQueue 实际
+
+- **ArrayBlockingQueue**：一个由数组支持的有界阻塞队列，规定大小的BlockingQueue,其构造函数必须带一个int参数来指明其大小.**其所含的对象是以FIFO(先入先出)顺序排序的**。
+- **LinkedBlockingQueue**：大小不定的BlockingQueue,若其构造函数带一个规定大小的参数,生成的BlockingQueue有大小限制,若不带大小参数,所生成的BlockingQueue的大小由Integer.MAX_VALUE来决定.
+ **其所含的对象是以FIFO(先入先出)顺序排序的**。其中主要用到put和take方法，**put方法在队列满的时候会阻塞直到有队列成员被消费，take方法在队列空的时候会阻塞，直到有队列成员被放进来**
+- **PriorityBlockingQueue**：类似于LinkedBlockQueue,但其所含对象的排序不是FIFO,而是**依据对象的自然排序顺序或者是构造函数的Comparator决定的顺序**。
+- **SynchronousQueue**：特殊的BlockingQueue,**对其的操作必须是放和取交替完成的**。
+- **DelayQueue**: **DelayQueue中的元素只有当其指定的延迟时间到了，才能够从队列中获取到该元素**。DelayQueue是一个没有大小限制的队列，因此**往队列中插入数据的操作（生产者）永远不会被阻塞**，
+ **而只有获取数据的操作（消费者）才会被阻塞**。使用场景：DelayQueue使用场景较少，但都相当巧妙，常见的例子比如使用一个DelayQueue来管理一个超时未响应的连接队列
+
+
+```java
+
+class Toast {
+  public enum Status { DRY, BUTTERED, JAMMED }
+  private Status status = Status.DRY;
+  private final int id;
+  public Toast(int idn) { id = idn; }
+  public void butter() { status = Status.BUTTERED; }
+  public void jam() { status = Status.JAMMED; }
+  public Status getStatus() { return status; }
+  public int getId() { return id; }
+  public String toString() {
+    return "Toast " + id + ": " + status;
+  }
+}
+
+class ToastQueue extends LinkedBlockingQueue<Toast> {}
+
+class Toaster implements Runnable {
+  private ToastQueue toastQueue;
+  private int count = 0;
+  private Random rand = new Random(47);
+  public Toaster(ToastQueue tq) { toastQueue = tq; }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        TimeUnit.MILLISECONDS.sleep(
+          100 + rand.nextInt(500));
+        // Make toast
+        Toast t = new Toast(count++);
+        print(t);
+        // Insert into queue
+        toastQueue.put(t);
+      }
+    } catch(InterruptedException e) {
+      print("Toaster interrupted");
+    }
+    print("Toaster off");
+  }
+}
+
+// Apply butter to toast:
+class Butterer implements Runnable {
+  private ToastQueue dryQueue, butteredQueue;
+  public Butterer(ToastQueue dry, ToastQueue buttered) {
+    dryQueue = dry;
+    butteredQueue = buttered;
+  }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        // Blocks until next piece of toast is available:
+        Toast t = dryQueue.take();
+        t.butter();
+        print(t);
+        butteredQueue.put(t);
+      }
+    } catch(InterruptedException e) {
+      print("Butterer interrupted");
+    }
+    print("Butterer off");
+  }
+}
+
+// Apply jam to buttered toast:
+class Jammer implements Runnable {
+  private ToastQueue butteredQueue, finishedQueue;
+  public Jammer(ToastQueue buttered, ToastQueue finished) {
+    butteredQueue = buttered;
+    finishedQueue = finished;
+  }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        // Blocks until next piece of toast is available:
+        Toast t = butteredQueue.take();
+        t.jam();
+        print(t);
+        finishedQueue.put(t);
+      }
+    } catch(InterruptedException e) {
+      print("Jammer interrupted");
+    }
+    print("Jammer off");
+  }
+}
+
+// Consume the toast:
+class Eater implements Runnable {
+  private ToastQueue finishedQueue;
+  private int counter = 0;
+  public Eater(ToastQueue finished) {
+    finishedQueue = finished;
+  }
+  public void run() {
+    try {
+      while(!Thread.interrupted()) {
+        // Blocks until next piece of toast is available:
+        Toast t = finishedQueue.take();
+        // Verify that the toast is coming in order,
+        // and that all pieces are getting jammed:
+        if(t.getId() != counter++ ||
+           t.getStatus() != Toast.Status.JAMMED) {
+          print(">>>> Error: " + t);
+          System.exit(1);
+        } else
+          print("Chomp! " + t);
+      }
+    } catch(InterruptedException e) {
+      print("Eater interrupted");
+    }
+    print("Eater off");
+  }
+}
+
+public class ToastOMatic {
+  public static void main(String[] args) throws Exception {
+    ToastQueue dryQueue = new ToastQueue(),
+               butteredQueue = new ToastQueue(),
+               finishedQueue = new ToastQueue();
+    ExecutorService exec = Executors.newCachedThreadPool();
+    exec.execute(new Toaster(dryQueue));
+    exec.execute(new Butterer(dryQueue, butteredQueue));
+    exec.execute(new Jammer(butteredQueue, finishedQueue));
+    exec.execute(new Eater(finishedQueue));
+    TimeUnit.SECONDS.sleep(5);
+    exec.shutdownNow();
+  }
+}
+```
+
+## 在任务间使用管道进行输入与输出
+
+- **PipedWriter**:允许多个任务向管道写
+- **PipedReader**:允许不同任务从同一个管道读取
+- 管道实际上是一个“生产者-消费者”的变体，java中的管道实际上就是一个阻塞队列
+
+```java
+class Sender implements Runnable {
+  private Random rand = new Random(47);
+  private PipedWriter out = new PipedWriter();
+  public PipedWriter getPipedWriter() { return out; }
+  public void run() {
+    try {
+      while(true)
+        for(char c = 'A'; c <= 'z'; c++) {
+          out.write(c);
+          TimeUnit.MILLISECONDS.sleep(rand.nextInt(500));
+        }
+    } catch(IOException e) {
+      print(e + " Sender write exception");
+    } catch(InterruptedException e) {
+      print(e + " Sender sleep interrupted");
+    }
+  }
+}
+
+class Receiver implements Runnable {
+  private PipedReader in;
+  public Receiver(Sender sender) throws IOException {
+    in = new PipedReader(sender.getPipedWriter());
+  }
+  public void run() {
+    try {
+      while(true) {
+        // Blocks until characters are there:
+        printnb("Read: " + (char)in.read() + ", ");
+      }
+    } catch(IOException e) {
+      print(e + " Receiver read exception");
+    }
+  }
+}
+
+public class PipedIO {
+  public static void main(String[] args) throws Exception {
+    Sender sender = new Sender();
+    Receiver receiver = new Receiver(sender);
+    ExecutorService exec = Executors.newCachedThreadPool();
+    exec.execute(sender);
+    exec.execute(receiver);
+    TimeUnit.SECONDS.sleep(4);
+    exec.shutdownNow();
+  }
+} /* Output: (65% match)
+Read: A, Read: B, Read: C, Read: D, Read: E, Read: F, Read: G, Read: H, Read: I, Read: J, Read: K, Read: L, Read: M, java.lang.InterruptedException: sleep interrupted Sender sleep interrupted
+java.io.InterruptedIOException Receiver read exception
+*///:~
+
+```
