--- a/java/多线程/01 多线程基础.md
+++ b/java/多线程/01 多线程基础.md
@@ -198,10 +198,9 @@ ExecutorService exec = Executors.newCachedThreadPool(new DaemonThreadFactory());
 ## 从任务中返回值
 
 - Runnable执行独立的任务，但不返回值，如果要返回值，使用Callable
-- Callable必须使用EXecutorService.submit()方法调用它
-- submit产生Future对象
+- Callable一般用ExecutorService.submit()方法调用它,submit产生Future对象
 - 可以用isDone()来检测Future是否完成
-- 也可以直接调用get()，但是会阻塞
+- 也可以直接调用get()，但是会阻塞线程
 
 ```java
 class Task implements Callable<String> {
@@ -332,19 +331,17 @@ public class A {
 ### 可见性 与Volatile
 
 - 在多处理器的系统中，**可见性的问题比原子性的问题更加严重**
-- **一个任务做出的修改，即使在不中断的意义上讲是原子性的，对其它任务也有可能是不可见的**，有可能修改只是暂时性地存储在本地处理器的缓存中，
- 没有刷新到主存中，造成可能对于其它线程是不可见的
+- **一个任务做出的修改，即使在不中断的意义上讲是原子性的，对其它任务也有可能是不可见的**，有可能修改只是暂时性地存储在本地处理器的缓存中，没有刷新到主存中，造成可能对于其它线程是不可见的
 - **没有同步机制，可视性无法确定**
 
 ### Volatile
 
-- **volatile关键字，确保了应用中的可见性，如果将一个域声明为violatile,那么只要对这个域产生了写操作，那么所有的读操作都可以看到这个修改,**
- 即使有本地缓存，情况也是如此，volatile域被立即写到主存中，而读取操作就是发生在主存的
-- **在非volatile域上的原子操作不必刷新到主存中，因此其它读取该域的任务也不一定看到这个新值，没有保证可视性**
+- **volatile关键字，确保了应用中的可见性，如果将一个域声明为violatile,那么只要对这个域产生了写操作，那么所有的读操作都可以看到这个修改**,即使有本地缓存，情况也是如此，volatile域被立即写到主存中，而读取操作就是发生在主存的
+- 在非volatile域上的原子操作不必刷新到主存中，因此其它读取该域的任务也不一定看到这个新值，没有保证可视性
 - **如果多个任务在同时访问这个域，那么这个域就应当是volatie的，否则，这个域就应当只能经由同步的来访问，也就是任何读写这个域的方法应当被synchronized保护**
 - **如果一个域完全由synchronized方法和语句块来防护，那么这个域不必声明为volatile**
 - **一个任务所作的任何写入操作对这个任务都是可见的,如果它只需要这个任务内部可见,那么它不必设置为volatile**
-- **Volatile 但是本身却不能保证原子性与互斥性**
+- **volatile 但是本身却不能保证原子性与互斥性**
 - **如果一个域的值依赖于它之前的值（例如一个递增计数器），volatile它就无法工作了**
 
 ```java
@@ -361,7 +358,7 @@ public class SerialNumberGenerator {
 ```
 
 - **如果某个域的值受到其它域的限制，比如Range的lower必须满足lower<= upper，volatile它就无法工作了**
-- **使用volatile而不是synchronized的唯一安全的哪个情况是类中只有一个可变的域**
+- **使用volatile而不是synchronized的唯一安全的情况是类中只有一个可变的域,只要将这个域设置成volatile,这个类就保证了线程安全**
 - **如果一个域可能会被多个任务同时访问，或者这些任务中至少有一个是写入任务，那么就应当将这个域设置为volatile的**
 
 ### 原子类
@@ -451,7 +448,7 @@ public class A {
 
  public native boolean isInterrupted();
 
-  public static native boolean interrupted();
+ public static native boolean interrupted();
 
 ```
 
@@ -488,7 +485,7 @@ public class B implements Runnable {
 
 ### join wait sleep与中断
 
-- 如果一个线程被调用了interrupt()后,它的状态是已中断的.这个状态对于正在执行wait,join,sleep的线程,改变了线程的运行结果.
+- 一个线程调用了interrupt()后,它的状态是已中断的.这个状态对于正在执行wait,join,sleep的线程,改变了线程的运行结果.
 
 #### wait 与interrupt
 
