--- a/java/thinking in java/02 对象的初始化与清理.md
+++ b/java/thinking in java/02 对象的初始化与清理.md
@@ -8,8 +8,9 @@
 - [static代码块初始化](#static代码块初始化)
 - [普通代码块初始化](#普通代码块初始化)
 
-- 类的成员总是执行默认初始化，对象为null,基本变量为对应的值。而局部变量没有初始化则是未定义的
+## 对象初始化
 
+- 类的成员总是执行默认初始化，对象则为null,基本变量为对应的零值。而局部变量没有初始化则是未定义的
 - 尽管可以用this调用一个构造器，但是却不能调用两个构造器，并且必须将构造器的调用置于最起始处，否则会报错
 
 ## finalize()
@@ -42,7 +43,7 @@
 
 ## 数组
 
-- 数组也是一种引用类型数据
+- **数组也是一种引用类型数据**
 - 数组之间可以相互赋值，也是传递引用
 - 数组中的元素如果没有初始化，执行默认初始化
 - 可变参数其实是一个数组类型
