--- a/java/thinking in java/05 内部类.md
+++ b/java/thinking in java/05 内部类.md
@@ -9,6 +9,7 @@
 - [局部内部类](#局部内部类)
 - [内部类的继承](#内部类的继承)
 
+## 内部类定义
 
 - 内部类，将一个类的定义放在另一个类的内部
 - 一个非static内部类被嵌套多少层并不重要，它能透明的访问所有它所嵌入的外围类的所有成员，包括私有成员
@@ -72,7 +73,6 @@ class Outer {
 }
 ```
 
-
 - 如果匿名类的构造函数有参数，则将参数传给匿名类就行了
 
 ```java
@@ -99,13 +99,12 @@ public class Outer {
     public static A getA (i) {
         return new A(i) {
             {print("inner A constractor");}
-}
+
             void f() {}
         }
     }
 }
 ```
-
 
 ## static内部类（嵌套类）
 
@@ -117,7 +116,7 @@ public class Outer {
 - 正常情况下，接口中不能放任何代码，但static内部类可以作为接口的一部分
 - 放到接口中的任保类都自动是public 和static的，因为static的，只是将嵌套类放于接口的命名空间内，不违反接口规则
 - 可以在接口的内部类中实现其外部接口
-- 如果想创建某些公共代，使得它们可以被某个接口的所有不同实现所共用，使用接口的内部嵌套类会很方便
+- 如果想创建某些公共类，使得它们可以被某个接口的所有不同实现所共用，使用接口的内部嵌套类会很方便
 
 ```java
 public interface ClassInterface {
@@ -130,7 +129,6 @@ public interface ClassInterface {
     }
 }
 ```
-
 
 ## 局部内部类
 
@@ -150,8 +148,3 @@ public class InheritInner extends Outer.Inner {
     }
 }
 ```
-
-
-
-
-
