--- a/java/thinking in java/09 类型信息.md
+++ b/java/thinking in java/09 类型信息.md
@@ -11,7 +11,6 @@
 - [接口与类型信息](#接口与类型信息)
 - [使用RTTI的地方](#使用rtti的地方)
 
-
 ## Class
 
 - 每一个类都有一个class对象
@@ -52,7 +51,7 @@ System.out.print(b == c);
     - a.加载，查找字节码，创建class对象;
     - b.链接，验证字节码，为静态域分配存储空间，如果有必要的话，将解析这个类创建 的对其它类的所有引用；
     - c.初始化，如果该类有超类，则对其初始化，执行静态初始化器和静态初始化块，
-  初始化被延迟到了对静态方法和非常数静态域的首次引
+  初始化被延迟到了对静态方法和非常数静态域的首次引用
 
 ## newInstance
 
@@ -106,7 +105,6 @@ bType.isInstance(a)
 - invoke()
 - 动态代理
 
-
 ## 空对象
 
 - 策略模式的一种
@@ -143,7 +141,7 @@ public class Person {
 ## 接口与类型信息
 
 - 大量使用instanceOf会增加代码的耦合度，如果存在大量这样的代码，应当重新考虑设计
-- 解决方式之一是：针对接口编程，而将接口的实现变成包访问权限，私有访问权限，通过方法返回对应的  对象
+- 解决方式之一是：针对接口编程，而将接口的实现变成包访问权限，私有访问权限，通过方法返回对应的对象
 
 ```java
 public interface A {}
@@ -157,4 +155,3 @@ public A getA() {
 
 - 只有部分子类含有特定行为，如果将行为放到基类中不合适，因而在统一处理基类时，要使用 instanceOf然后进行特殊处理
 - 解决效率问题，如果用很麻烦的多态行为实现了功能，有时用instanceOf可能会非常简单
-
