--- a/java/thinking in java/10 泛型.md
+++ b/java/thinking in java/10 泛型.md
@@ -31,6 +31,7 @@
     - [利用有限制通配符来提升API的灵活性](#利用有限制通配符来提升api的灵活性)
     - [类型安全异构容器](#类型安全异构容器)
 
+## 泛型作用
 
 - 使用泛型的最初原因在于：要想使类或方法具有广泛的表达力，能过解耦类或方法与所使用的类型之间的约束
 - 只有当你希望使用的类型参数比某个具体类型更加泛化时，也就是说，当你希望代码能够跨多个类工作时，才使用泛型
@@ -77,7 +78,7 @@ c1 == c2; // true
 
 ### 擦除的补偿
 
-- 泛型由理擦除不能进行instanceOf等操作，但是可以能过传入泛型的class对象来进行类型判断,主要是**使用Class.isInstance方法**
+- 泛型由理擦除不能进行instanceOf等操作，但是可以通过传入泛型的class对象来进行类型判断,主要是**使用Class.isInstance方法**
 
 ```java
 public class ClassTypeCapture<T> {
@@ -94,7 +95,7 @@ public class ClassTypeCapture<T> {
 ```
 
 - 泛型中创建泛型参数类对象，方法是使用工厂模式，不过一种方法是使用Class对象的newInstance()方法，但是这种有限制，对象必须有public的无参构造函数，
- 另外一种是使且显示的工厂模式
+ 另外一种是使用显示的工厂模式
 
  ```java
 
@@ -127,10 +128,9 @@ class Foo<T> {
 
  ```
 
-- 一般情况下，不能创建泛型的数组，一般的解决办法是在任何纯净度为创建泛型数组的地方使用ArrayList
-  另外一种方法是创建一个泛型边界的数组，**并且在类的内部也保存的是边界的数组，然后在使用数组元素的时候，添加转型**
+- 一般情况下，不能创建泛型的数组，一般的解决办法是在任何需要创建泛型数组的地方使用ArrayList
+- 另外一种方法是创建一个泛型边界的数组，**并且在类的内部也保存的是边界的数组，然后在使用数组元素的时候，添加转型**
   **千万注意不要在类的内部保存T[]的数组**
-
 
 ```java
 public class GenericArray<T> {
@@ -176,11 +176,11 @@ class View {}
 class ColoredDimension<T extends View & HasColor & Dimension> {}
 
 // 下面这种是错误的，必须先class,然后interface
-//class ColoredDimension<T extends HasColor & HasColorView & Dimension> {}
+//class ColoredDimension<T extends HasColor & View & Dimension> {}
 
 ```
 
-- 泛型中所有的动作都发生在边界处，对传递进来的值进行额外的编译期检查，并插入对传递出去的值的额外转型
+- **泛型中所有的动作都发生在边界处，对传递进来的值进行额外的编译期检查，并插入对传递出去的值的额外转型**
 - 泛型是使用擦除来实现的，所有泛型之间不存在转型
 
 ```java
@@ -530,7 +530,7 @@ class CommunidateReflectively {
 ```
 
 - **潜在类型机制,实际上是指定了一个"隐式的接口",只不过我们不关心它们是什么类型,是否实现了统一的接口**,
- **我只关心在它的对象可以调用这些方法**, 
+ **我只关心在它的对象可以调用这些方法**
 - **为了实现潜在类型机制又不使用反射,可以考虑使用适配器模式**
 
 ## 代码注意
@@ -577,15 +577,12 @@ if (o instanceOf Set) {
 
 - Collection<?>除了null不能add作何类型
 
-
-
 ### 消除非受检警告
 
 - 在使用泛型的代码的地方，经常会出现unchecked的警告，而每一个unchecked的警告在运行时都可能出现    ClassCastException,**应当尽可能的消除非受检警告**
 - **如果无法消除警告，并且可以证明引起警告的代码是类型安全的，可以用@SuppressWarnings("unckecked")这个注解来禁止警告**
 - **应当在尽可能小的范围内使用@SuppressWarnings注解**，永远不要在类上使用@SuppressWarnings注解
 - **如果发现自己在长度不止一行的方法或构造函数中使用了@SuppressWarnings,可以将它移到一个局部变量**，在局部变量上使用注解
-
 
 ```java
 // arrayList中的方法
@@ -622,18 +619,15 @@ public <T> T[] toArray(T[] a) {
 - 因为擦除，泛型在运行时的类型信息比编译期间的类型信息要少，因而泛型是不可具体化的类型，**因而不能创建泛型数组**，所以一般情况下**要使用泛型数组，要么考虑使用List, 要么使用Object[]数组，然后内部进行转型**
 - **不要混用数组与泛型**
 
-
 ### 优先考虑使用泛型
 
 - 使用泛型，比在调用时进行转型更加简单，也更加安全，所以应当使用泛型
-
 
 ### 优先考虑使用泛型方法
 
 - 使用泛型方法，比要求使用者转换输入参数和返回值，更加简单，所以应当使用泛型方法
 - 优先考虑泛型方法，而不是将速个类泛型化
 - 常且的泛型方法：**函数对象，递归泛型限制，带边界的自限定泛型**
-
 
 ### 利用有限制通配符来提升API的灵活性
 
@@ -699,4 +693,3 @@ public class Favorites {
     }
 }
 ```
-
