Updates other/design-pattern/00 设计原则.md
Auto commit by GitBook Editor

--- a/other/design-pattern/00 设计原则.md
+++ b/other/design-pattern/00 设计原则.md
@@ -29,6 +29,7 @@
 
 * 客户端不应该依赖它不需要的接口
 * 类间的依赖关系应该建立在最小的接口上，接口隔离原则的目的是系统解开耦合，从而容易修改，重构
+* **依赖的接口尽可能的小，但是要有限度**
 
 ## Law of Demeter（迪米特原则／最少知识原则）
 
