Updates other/design-pattern/00 设计原则.md
Auto commit by GitBook Editor

--- a/other/design-pattern/00 设计原则.md
+++ b/other/design-pattern/00 设计原则.md
@@ -34,9 +34,8 @@
 ## Law of Demeter（迪米特原则／最少知识原则）
 
 * Only talk to your immedate friends,只和直接的朋友通信
-* 一个对象应该对其它对象有最小的了解
-* 一个类应该对自己需要解耦或调用的类知道得最少，类的内部如何实现与调用或者依赖关系，调用者或者
-  依赖者只需要知道它需要的方法即可，其它的一律不用管
+* 一个类应该对自己需要解耦或调用的类知道得最少，
+* 类的内部如何实现与调用或者依赖关系，调用者或者依赖者只需要知道它需要的方法即可，其它的一律不用管
 
 
 
