Updates other/design-pattern/00 设计原则.md

--- a/other/design-pattern/00 设计原则.md
+++ b/other/design-pattern/00 设计原则.md
@@ -34,8 +34,9 @@
 ## Law of Demeter（迪米特原则／最少知识原则）
 
 * Only talk to your immedate friends,只和直接的朋友通信
-* 一个类应该对自己需要解耦或调用的类知道得最少，
+* 一个类应该对自己需要解耦或调用的类知道得最少
 * 类的内部如何实现与调用或者依赖关系，调用者或者依赖者只需要知道它需要的方法即可，其它的一律不用管
+* 迪米特法则的目的在于降低类与类之间的耦合。由于每个类尽量减少对其他类的依赖，因此，很容易使得系统的功能模块功能独立，是的相互间存在尽可能少的依赖关系。
 
 
 
