--- a/other/design-pattern/00 设计原则.md
+++ b/other/design-pattern/00 设计原则.md
@@ -1,42 +1,37 @@
 # 设计原则
 
-## Single Responsibility Priciple\(单一职责原则\)
+## Single Responsibility Priciple(单一职责原则)
 
-* 就一个类而言，应该仅有一个引起它变化的原因，最好一个责任只指派给一个类
-* 两个完全不一样的功能不应该放到一个类中，一个类中应该是一组相关性很高的函数，数据的封装
+- 就一个类而言，应该仅有一个引起它变化的原因，最好一个责任只指派给一个类
+- 两个完全不一样的功能不应该放到一个类中，一个类中应该是一组相关性很高的函数，数据的封装
 
-## Open Close Priciple\(开闭原则\)
+## Open Close Priciple(开闭原则)
 
-* 软件中的对象\(类，模块，函数\)应当对拓展是开放的，对修改是关闭的
-* 应当尽量能过拓展的方式来实现变化，而不是通过修改已有的代码来实现
+- 软件中的对象(类，模块，函数)应当对拓展是开放的，对修改是关闭的
+- 应当尽量能过拓展的方式来实现变化，而不是通过修改已有的代码来实现
 
-## Liskov Substitution Priciple\(里氏替换原则\)
+## Liskov Substitution Priciple(里氏替换原则)
 
-* 所有引用基类的地方必须能够使用其子类的对象，反过来，使用子类的地方，父类未必能够适应
-* 里氏替换原则总结起来就是建立抽象，通过抽象建立规范，具体的实现在运行时替换掉抽象，保持系统的
-  拓展性和灵活性
+- 所有引用基类的地方必须能够使用其子类的对象，反过来，使用子类的地方，父类未必能够适应
+- 里氏替换原则总结起来就是建立抽象，通过抽象建立规范，具体的实现在运行时替换掉抽象，保持系统的
+ 拓展性和灵活性
 
-## Dependence Inversion Principle\(依赖倒置原则\)
+## Dependence Inversion Principle(依赖倒置原则)
 
-* 高层模块不应该依赖低层模块，两者都应该依赖抽象
-* 抽象不应该依赖细节
-* 细节应该依赖抽象
-* 模块间的依赖能过抽象发生，实现类之间不发生直接的依赖关系，其依赖关系是通过接口和抽象类产生的
-* 主要在于避免使用具体类，而使用抽象，可以是接口，也可是基类，也可以是抽象类
-* **针对接口编程**
+- 高层模块不应该依赖低层模块，两者都应该依赖抽象
+- 抽象不应该依赖细节
+- 细节应该依赖抽象
+- 模块间的依赖能过抽象发生，实现类之间不发生直接的依赖关系，其依赖关系是通过接口和抽象类产生的
+- 主要在于避免使用具体类，而使用抽象，可以是接口，也可是基类，也可以是抽象类
 
-## InterfaceSegregation Principle\(接口隔离原则\)
+## InterfaceSegregation Principle(接口隔离原则)
 
-* 客户端不应该依赖它不需要的接口
-* 类间的依赖关系应该建立在最小的接口上，接口隔离原则的目的是系统解开耦合，从而容易修改，重构
-* **依赖的接口尽可能的小，但是要有限度**
+- 客户端不应该依赖它不需要的接口
+- 类间的依赖关系应该建立在最小的接口上，接口隔离原则的目的是系统解开耦合，从而容易修改，重构
 
 ## Law of Demeter（迪米特原则／最少知识原则）
 
-* Only talk to your immedate friends,只和直接的朋友通信
-* 一个类应该对自己需要解耦或调用的类知道得最少
-* 类的内部如何实现与调用或者依赖关系，调用者或者依赖者只需要知道它需要的方法即可，其它的一律不用管
-* 迪米特法则的目的在于降低类与类之间的耦合。由于每个类尽量减少对其他类的依赖，因此，很容易使得系统的功能模块功能独立，是的相互间存在尽可能少的依赖关系。
-
-
-
+- Only talk to your immedate friends,只和直接的朋友通信
+- 一个对象应该对其它对象有最小的了解
+- 一个类应该对自己需要解耦或调用的类知道得最少，类的内部如何实现与调用或者依赖关系，调用者或者
+ 依赖者只需要知道它需要的方法即可，其它的一律不用管
