Updates java/thinking in java/03_类复用.md
Auto commit by GitBook Editor

--- a/java/thinking in java/03_类复用.md
+++ b/java/thinking in java/03_类复用.md
@@ -40,8 +40,8 @@
 
 ## final
 
-- final基类类型，其值不变，
-- final对象，其引用恒定不变
+- final基本类型，其值不变，
+- final对象，其引用不变
 - 空白final，声明为final,但定义时未初始化，必须在构造函数初始化
 - final方法，保证不被覆盖，所以有private方法隐式是final的，
  继承体系中，子类可以重新定义一个与其类相同签名的，在基类中是private的方法，但这并不是方法覆盖，而是两个不同的方法
@@ -50,4 +50,4 @@
 ## 代理
 
 - 数据的存储方式等同于组合
-- 但对外暴露出了内部对象的所有接口
+- 但对外暴露出了内部对象的所有接口，或为了隐藏部分接口，只暴露出被代理类的部分接口
