Updates java/thinking in java/04_多态 接口.md
Auto commit by GitBook Editor

--- a/java/thinking in java/04_多态 接口.md
+++ b/java/thinking in java/04_多态 接口.md
@@ -15,20 +15,21 @@
 
 ### 多态基础
 
-* 态可以覆盖基类中的同签名的private方法，但并不是overide,因而不存在多态性
+* 可以覆盖基类中的同签名的private方法，但并不是overide,因而不存在多态性
 * 静态方法和类的域都不存在多态性
 * 用继承表达行为上差异，用字段表达状态上的变化
 
 ### 构造函数
 
-* 构造函数中一般不要调用override方法，因为调用构造函数的时候 ，对象可能处于一个未完全初始化好的状态，具有多态性的方法可能并不是预期的效果
-* 尽可能用简单的方法使对象进入正常的状态，如果可以的话，避免调用其它的方法，在构造器中唯一能够安全调用地方法是基类中的final 方法，当然也适用于private方法
-* 构造函数先基类，后导出类
-* 析构函数先导出类，后基类
+* **构造函数中一般不要调用可以被override的方法**，因为调用构造函数的时候 ，对象可能处于一个未完全初始化好的状态，具有多态性的方法可能并不是预期的效果
+* **尽可能用简单的方法使对象进入正常的状态**，如果可以的话，避免调用其它的方法，在构造器中唯一能够安全调用地方法是基类中的final 方法，当然也适用于自身的private方法
+* 构造函数先初始化基类，后导出类
+* 析构函数先析构导出类，后基类
 
 ### 协变返回类型
 
 * 协变返回类型，导出类中的被覆盖方法可以返回基类方法中返回类型的某种导出类型
+* 数组是协变类型，而泛型不存在协变类型，String[]是Object[]的子类
 
 ## 接口与抽象
 
