Updates java/thinking in java/04_多态 接口.md
Auto commit by GitBook Editor

--- a/java/thinking in java/04_多态 接口.md
+++ b/java/thinking in java/04_多态 接口.md
@@ -29,7 +29,7 @@
 ### 协变返回类型
 
 * 协变返回类型，导出类中的被覆盖方法可以返回基类方法中返回类型的某种导出类型
-* 数组是协变类型，而泛型不存在协变类型，String[]是Object[]的子类
+* **数组是协变类型，而泛型不存在协变类型**，String[]是Object[]的子类
 
 ## 接口与抽象
 
