Updates java/thinking in java/08_类型信息.md
Auto commit by GitBook Editor

--- a/java/thinking in java/08_类型信息.md
+++ b/java/thinking in java/08_类型信息.md
@@ -15,7 +15,7 @@
 
 - 每一个类都有一个class对象
 - 所有的类都是在对其第一次使用时，动态加载到jvm中的
-- 当调用类的static方法或引用类的static成员，就会加载这个类，这说明构造函数也是static的
+- 当调用类的static方法或引用类的static成员，就会加载这个类，说明构造函数也是static的
 - Class对象仅在需要时才被加载，而static初始化是在类加载的时候进行的
 
 ## Class常见方法
