Updates java/thinking in java/09_泛型.md
Auto commit by GitBook Editor

--- a/java/thinking in java/09_泛型.md
+++ b/java/thinking in java/09_泛型.md
@@ -42,7 +42,7 @@
 - 泛型方法优先于泛型类
 - 如果类的static方法要使用泛型，因为static方法不能访问类的泛型参数，所以必须使用泛型方法
 - 使用泛型类时，必须在创建对象时指定类型参数，而使用泛型方法通常不必指定参数。
-- 泛型方法可以显示的指明参数类型，要显式的指明类型，必须在点操作符和方法名之间插入尖括号，然后把类类型置于尖括号内，
+- **泛型方法可以显示的指明参数类型**，要显式的指明类型，必须在点操作符和方法名之间插入尖括号，然后把类类型置于尖括号内，
  如果是在定义该方法的类的内部，必须在点操作符之前使用this关键字，如果是使用static方法，则必须在点操作符之前加上类名
 
 ```java
@@ -78,7 +78,7 @@ c1 == c2; // true
 
 ### 擦除的补偿
 
-- 泛型由理擦除不能进行instanceOf等操作，但是可以通过传入泛型的class对象来进行类型判断,主要是**使用Class.isInstance方法**
+- 泛型由于擦除不能进行instanceOf等操作，但是可以通过传入泛型参数的class对象来进行类型判断,主要是**使用Class.isInstance方法**
 
 ```java
 public class ClassTypeCapture<T> {
@@ -95,7 +95,6 @@ public class ClassTypeCapture<T> {
 ```
 
 - 泛型中创建泛型参数类对象，方法是使用工厂模式，不过一种方法是使用Class对象的newInstance()方法，但是这种有限制，对象必须有public的无参构造函数，
- 另外一种是使用显示的工厂模式
 
  ```java
 
@@ -110,9 +109,12 @@ public class ClassTypeCapture<T> {
          }
      }
  }
- ```
+```
 
- ```java
+- 另外一种是使用显示的工厂模式
+
+
+```java
 
 interface Factory<T> {
     T create();
