Updates java/thinking in java/09_泛型.md
Auto commit by GitBook Editor

--- a/java/thinking in java/09_泛型.md
+++ b/java/thinking in java/09_泛型.md
@@ -130,7 +130,7 @@ class Foo<T> {
 
  ```
 
-- 一般情况下，不能创建泛型的数组，一般的解决办法是在任何需要创建泛型数组的地方使用ArrayList
+- **一般情况下，不能创建泛型的数组**，一般的解决办法是在任何需要创建泛型数组的地方使用ArrayList
 - 另外一种方法是创建一个泛型边界的数组，**并且在类的内部也保存的是边界的数组，然后在使用数组元素的时候，添加转型**
   **千万注意不要在类的内部保存T[]的数组**
 
