设计模式小修改

--- a/java/thinking in java/09_泛型.md
+++ b/java/thinking in java/09_泛型.md
@@ -346,7 +346,7 @@ class SelfBounded <T extends SelfBounded<T>>
 class A extends SelfBounded<A> {}
 ```
 
-- 自限定的本质：**可以保证类型参数与正在被定义的类相同**，也就是说，**我正定义一个泛型类，其类型参数就是我本身**
+- 自限定的本质：**可以保证类型参数与正在被定义的类相同**，也就是说，**我正定义一个泛型类，其类型参数就是我本身或我的子类**
 - 如果使用了自限定,就应当了解这个类所用的类型参数与使用这个参数的类具有相同的基类型
 - 如果泛型方法使用了自限定,可以防止这个方法被应用于除上述形式的自限定参数之外的其它任何事务上
 
