--- a/other/design-pattern/15 适配器模式.md
+++ b/other/design-pattern/15 适配器模式.md
@@ -2,15 +2,15 @@
 
 ## 定义
 
-- 将一个类的接口，转换成客户期望的另一个接口，适配器让原来不兼容的类可以合作无间
+* 将一个类的接口，转换成客户期望的另一个接口，适配器让原来不兼容的类可以合作无间
 
 ## 类适配器
 
 ### 适配器模式的角色
 
-- 目标(Target)角色：这就是所期待得到的接口。注意：由于这里讨论的是类适配器模式，因此目标不可以是类。
-- 源(Adapee)角色：现在需要适配的接口。
-- 适配器(Adaper)角色：适配器类是本模式的核心。适配器把源接口转换成目标接口。显然，这一角色不可以是接口，而必须是具体类
+* 目标\(Target\)角色：这就是所期待得到的接口。注意：由于这里讨论的是类适配器模式，因此目标不可以是类。
+* 源\(Adapee\)角色：现在需要适配的接口。
+* 适配器\(Adaper\)角色：适配器类是本模式的核心。适配器把源接口转换成目标接口。显然，这一角色不可以是接口，而必须是具体类
 
 ```java
 // Target
@@ -24,7 +24,6 @@ public interface Target {
      */
     public void sampleOperation2();
 }
-
 ```
 
 ```java
@@ -64,7 +63,6 @@ public interface Target {
      */
     public void sampleOperation2();
 }
-
 ```
 
 ```java
@@ -99,3 +97,6 @@ public class Adapter implements Target{
     }
 }
 ```
+
+
+
