--- a/other/design-pattern/19 桥接模式.md
+++ b/other/design-pattern/19 桥接模式.md
@@ -7,7 +7,7 @@
 
 ## 实现
 
-![bridge](../image-resources/designpattern/bridge.png)
+![bridge](/image-resources/designpattern/bridge.png)
 
 - 可以看出，这个系统含有两个等级结构：
     - 由抽象化角色和修正抽象化角色组成的抽象化等级结构。
