--- a/other/design-pattern/01 创建对象相关的设计模式.md
+++ b/other/design-pattern/01 创建对象相关的设计模式.md
@@ -1,29 +1,29 @@
 # 创建对象相关的设计模式
 
-- [单例模式](#单例模式)
-- [Builder模式](#builder模式)
-- [工厂方法](#工厂方法)
-    - [普通工厂](#普通工厂)
-    - [多个工厂方法](#多个工厂方法)
-    - [静态工厂方法](#静态工厂方法)
-- [抽象工厂](#抽象工厂)
-- [原型模式](#原型模式)
-    - [原型设计模式的定义](#原型设计模式的定义)
-    - [原型设计模式的优势](#原型设计模式的优势)
-    - [原型设计模式的注意点](#原型设计模式的注意点)
-    - [原型设计模式的示例](#原型设计模式的示例)
+* [单例模式](#单例模式)
+* [Builder模式](#builder模式)
+* [工厂方法](#工厂方法)
+  * [普通工厂](#普通工厂)
+  * [多个工厂方法](#多个工厂方法)
+  * [静态工厂方法](#静态工厂方法)
+* [抽象工厂](#抽象工厂)
+* [原型模式](#原型模式)
+  * [原型设计模式的定义](#原型设计模式的定义)
+  * [原型设计模式的优势](#原型设计模式的优势)
+  * [原型设计模式的注意点](#原型设计模式的注意点)
+  * [原型设计模式的示例](#原型设计模式的示例)
 
 ## 单例模式
 
-- 懒汉加载
+* 懒汉加载
 
-- DCL(双重加锁)
+* DCL\(双重加锁\)
 
-- Holder模式
+* Holder模式
 
-- enum模式
+* enum模式
 
-- 使用容器实现单例
+* 使用容器实现单例
 
 ```java
 public class SingleTonManager {
@@ -43,14 +43,13 @@ public class SingleTonManager {
 
 ## 工厂方法
 
-- 定义一个创建对象的接口，但由子类决定要实例化的类是哪一个，工厂方法让类把实例化推迟到子类，一般用于现在还不知道要实例化哪些具体的类
+* 定义一个创建对象的接口，但由子类决定要实例化的类是哪一个，工厂方法让类把实例化推迟到子类，一般用于现在还不知道要实例化哪些具体的类
 
 ### 普通工厂
 
-- 普通工厂模式就是建立一个工厂类，对实现了同一接口的一些类进行实例的创建
+* 普通工厂模式就是建立一个工厂类，对实现了同一接口的一些类进行实例的创建
 
 ```java
-
 public interface MyInterface {
     public void print();
 }
@@ -101,7 +100,7 @@ public class FactoryTest {
 
 ### 多个工厂方法
 
-- 多个工厂方法模式，是对普通工厂方法模式的改进，多个工厂方法模式就是提供多个工厂方法，分别创建对象
+* 多个工厂方法模式，是对普通工厂方法模式的改进，多个工厂方法模式就是提供多个工厂方法，分别创建对象
 
 ```java
 public class MyFactory {
@@ -155,11 +154,10 @@ public class FactoryTest {
 
 ## 抽象工厂
 
-- 工厂方法模式有一个问题就是，类的创建依赖工厂类，也就是说，如果想要拓展程序，必须对工厂类进行修改，这违背了闭包原则。
-- 为解决这个问题，我们来看看抽象工厂模式：创建多个工厂类，这样一旦需要增加新的功能，直接增加新的工厂类就可以了，不需要修改之前的代码。
+* 工厂方法模式有一个问题就是，类的创建依赖工厂类，也就是说，如果想要拓展程序，必须对工厂类进行修改，这违背了闭包原则。
+* 为解决这个问题，我们来看看抽象工厂模式：创建多个工厂类，这样一旦需要增加新的功能，直接增加新的工厂类就可以了，不需要修改之前的代码。
 
 ```java
-
 public interface Provider {
     public MyInterface produce();
 }
@@ -190,27 +188,26 @@ public class FactoryTest {
     }
 
 }
-
 ```
 
 ## 原型模式
 
 ### 原型设计模式的定义
 
-- 用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象
+* 用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象
 
 ### 原型设计模式的优势
 
-- 使用原型模式创建对象比直接new一个对象在性能上要好的多，因为Object类的clone方法是一个本地方法，它直接操作内存中的二进制流，
- 特别是复制大对象时，性能的差别非常明显。
-- 使用原型模式的另一个好处是简化对象的创建，使得创建对象就像我们在编辑文档时的复制粘贴一样简单
+* 使用原型模式创建对象比直接new一个对象在性能上要好的多，因为Object类的clone方法是一个本地方法，它直接操作内存中的二进制流，
+  特别是复制大对象时，性能的差别非常明显。
+* 使用原型模式的另一个好处是简化对象的创建，使得创建对象就像我们在编辑文档时的复制粘贴一样简单
 
 ### 原型设计模式的注意点
 
-- java的clone方法有风险，**要注意浅拷贝与深拷贝**
-- **浅拷贝**：将一个对象复制后，基本数据类型的变量都会重新创建，而引用类型，指向的还是原对象所指向的。
-- **深复制**：将一个对象复制后，不论是基本数据类型还有引用类型，都是重新创建的。简单来说，就是深复制进行了完全彻底的复制，而浅复制不彻底
-- 自己实现拷贝函数,拷贝构造函数
+* java的clone方法有风险，**要注意浅拷贝与深拷贝**
+* **浅拷贝**：将一个对象复制后，基本数据类型的变量都会重新创建，而引用类型，指向的还是原对象所指向的。
+* **深复制**：将一个对象复制后，不论是基本数据类型还有引用类型，都是重新创建的。简单来说，就是深复制进行了完全彻底的复制，而浅复制不彻底
+* 自己实现拷贝函数,拷贝构造函数
 
 ```java
 public class Prototype implements Cloneable, Serializable {
@@ -243,6 +240,7 @@ public class Prototype implements Cloneable, Serializable {
         ByteArrayInputStream bis = new ByteArrayInputStream(bos.toByteArray());
         ObjectInputStream ois = new ObjectInputStream(bis);
         return ois.readObject();
+        
     }
 
 }
@@ -250,7 +248,7 @@ public class Prototype implements Cloneable, Serializable {
 
 ### 原型设计模式的示例
 
-- Okhttpclient.newBuilder()方法
+* Okhttpclient.newBuilder\(\)方法
 
 ```java
 public Builder newBuilder() {
@@ -283,5 +281,7 @@ Builder(OkHttpClient okHttpClient) {
     this.readTimeout = okHttpClient.readTimeout;
     this.writeTimeout = okHttpClient.writeTimeout;
 }
-
 ```
+
+
+
