--- a/other/design-pattern/04 状态模式.md
+++ b/other/design-pattern/04 状态模式.md
@@ -2,24 +2,24 @@
 
 ## 定义
 
-- 状态模式是一种对象的行为模式。
-- 允许对象在内部状态改变时该变它的行为，对象看起来好修改了它的类（Context内部有多个已经定义好的状态对象的组合，可以自行根据当前状态该变其行为，在外部看来，因为Context可以完全该变它的行为，看起来，好是从别的类实例化而来的）
-- **将行为封装到状态中，在Context中保存状态，将Context的行为委托给状态处理**
+* 状态模式是一种对象的行为模式。
+* 允许对象在内部状态改变时该变它的行为，对象看起来好修改了它的类（Context内部有多个已经定义好的状态对象的组合，可以自行根据当前状态该变其行为，在外部看来，因为Context可以完全该变它的行为，看起来，好是从别的类实例化而来的）
+* **将行为封装到状态中，在Context中保存状态，将Context的行为委托给状态处理**
 
 ## 使用状态模式
 
-- 一般用于有多个状态的建模
-- 常见针对不同状态的处理方法是，在Context里面创建对象保存状态值，然后在方法里面用if else if else来处理不同状态下的动作
-- 状态模式在Context里面持有多个预定义好的状态对象，并且有一个当前状态对象的引用，然后context的行为随时可以委托到状态对象去处理
-- 当状态该变是固定的时候，适合将状态该变放到context中，当转换是动态的时候，通常会放到状态类中
-- 客户直接与context交互，而不是与状态对象，context将行为委托给当前的状态对象
-- 如果有多个Context的实例，状态可以共享，但是不能持有它们自己的内部状态，如果针对不同的context，则使用代码的时候要传入不同的Context
+* 一般用于有多个状态的建模
+* 常见针对不同状态的处理方法是，在Context里面创建对象保存状态值，然后在方法里面用if else if else来处理不同状态下的动作
+* 状态模式在Context里面持有多个预定义好的状态对象，并且有一个当前状态对象的引用，然后context的行为随时可以委托到状态对象去处理
+* 当状态该变是固定的时候，适合将状态该变放到context中，当转换是动态的时候，通常会放到状态类中
+* 客户直接与context交互，而不是与状态对象，context将行为委托给当前的状态对象
+* 如果有多个Context的实例，状态可以共享，但是不能持有它们自己的内部状态，如果针对不同的context，则使用代码的时候要传入不同的Context
 
 ## 策略模式与状态模式
 
-- 都是通过在类内部组合对象来达到代码的弹性
-- 一般策略模式是主动控制使用什么策略，并且不同的策略是完全可以相互替换的
-- 而状态的context中是一系列的预先定义好的状态表，并且由context行为去控制其状态的变化
+* 都是通过在类内部组合对象来达到代码的弹性
+* 一般策略模式是主动控制使用什么策略，并且不同的策略是完全可以相互替换的
+* 而状态的context中是一系列的预先定义好的状态表，并且由context行为去控制其状态的变化
 
 ```java
 // 抽象状态类
@@ -86,3 +86,6 @@ public class Client {
     }
 }
 ```
+
+
+
