--- a/java/effective java/04_枚举.md
+++ b/java/effective java/04_枚举.md
@@ -164,7 +164,7 @@ public class Text {
 ### EnumSet
 
 - 使用位域的主要坏处就是难于理解，而且要遍历位域表示的所有元素也比较麻烦
-- 使用EnumSet不仅方便理解，而且在性能上与位域比差不多，因为它在内部就是对于<=64个元素的就是使用long的位域来表示的
+- 使用EnumSet不仅方便理解，而且在性能上与位域比差不多，因为它在内部对于小于等于64个元素的就是使用long的位域来表示的
 - **如果要在集合中使用枚举类型，那么就应当使用EnumSet**
 
 ```java
@@ -267,44 +267,47 @@ public interface Food {
  **这样在使用接口的地方，就可以使用基础枚举类型**
 
  ```java
- public interface Operation {
-     double apply (double x, double y);
- }
 
- public enum BasicOperation implements Operation{
-    PLUS("+") { double apply (double x, double y) {return x + y;}},
-    MINUS("-") { double apply (double x, double y) {return x - y;}},
-    TIMES("*") { double apply (double x, double y) {return x * y;}},
-    DIVIDE("/") { double apply (double x, double y) {return x / y;}};
+     public interface Operation {
+         double apply (double x, double y);
+     }
+ ``` 
+ 
+```java
+     public enum BasicOperation implements Operation{
+        PLUS("+") { double apply (double x, double y) {return x + y;}},
+        MINUS("-") { double apply (double x, double y) {return x - y;}},
+        TIMES("*") { double apply (double x, double y) {return x * y;}},
+        DIVIDE("/") { double apply (double x, double y) {return x / y;}};
 
-    private final String symbol;
+        private final String symbol;
 
-    private Operation(String symbol) {
-        this.symbol = sysmbol;
+        private Operation(String symbol) {
+            this.symbol = sysmbol;
+        }
+
+        @Override
+        public String toString() {
+            return symbol;
+        }    
     }
 
-    @Override
-    public String toString() {
-        return symbol;
-    }
-}
+     public enum ExtendedOperation implements Operation{
+        EX("^") { double apply (double x, double y) {return Math.pow(x, y;}},
 
- public enum ExtendedOperation implements Operation{
-    EX("^") { double apply (double x, double y) {return Math.pow(x, y;}},
+        REAOMDER("%") { double apply (double x, double y) {return x % y;}};
 
-    REAOMDER("%") { double apply (double x, double y) {return x % y;}};
+        private final String symbol;
 
-    private final String symbol;
+        private Operation(String symbol) {
+            this.symbol = sysmbol;
+        }
 
-    private Operation(String symbol) {
-        this.symbol = sysmbol;
-    }
+        @Override
+        public String toString() {
+            return symbol;
+        }
 
-    @Override
-    public String toString() {
-        return symbol;
-    }
-}
 
 private static <T extends Enum<T> & Operation> void test(Class<T> opType, double x, double y) {
     for (Operation op : opType.getEnumConstants()) {
