Track 1 files into repository.
- modified java/effective java/05_方法.md

Auto commit by GitBook Editor

--- a/java/effective java/05_方法.md
+++ b/java/effective java/05_方法.md
@@ -1,5 +1,23 @@
 # 方法
 
+- [检查参数的有效性](#检查参数的有效性)
+- [必要时进行保护性拷贝](#必要时进行保护性拷贝)、
+    - [构造函数中的拷贝](#构造函数中的拷贝)
+    - [返回方法的拷贝](#返回方法的拷贝)
+    - [保护性拷贝总结](#保护性拷贝总结)
+- [谨慎设计方法的签名](#谨慎设计方法的签名)
+    - [谨慎地选择方法的名字](#谨慎地选择方法的名字)
+    - [不要过于追求提供便利的方法](#不要过于追求提供便利的方法)
+    - [避免过长的参数列表](#避免过长的参数列表)
+    - [对于参数类型，多使用接口而不是具体的类](#对于参数类型多使用接口而不是具体的类)
+    - [对于boolean参数，要优先使用两个元素的枚举类型](#对于boolean参数要优先使用两个元素的枚举类型)
+- [谨慎地使用重载](#谨慎地使用重载)
+    - [重载 vs 重写](#重载-vs-重写)
+    - [重载原则](#重载原则)
+- [慎用可变参数](#慎用可变参数)
+- [返回长度为0的数组或集合，而不是返回null](#返回长度为0的数组或集合而不是返回null)
+- [为所有导出的API元素编写文档注释](#为所有导出的api元素编写文档注释)
+
 ## 检查参数的有效性
 
 - 每当编写构造函数或方法时，**应当考虑它的参数有哪些限制，然后把这些限制写到文档中**，
@@ -54,7 +72,6 @@ Date end = new Date();
 Period p = new Period(start, end);
 // 我们希望period不再变化，但是由于end有方法可以修改，这样并不能保证
 end.setYear(78);
-
 ```
 
 ### 构造函数中的拷贝
@@ -65,7 +82,7 @@ end.setYear(78);
  如果先对原始对象进行有效性检查，然后进行拷贝，则可能在检查之后由于多线程导致对象的状态发生了变化
 
  ```java
- 
+
  public Period (Date start, Date end) {
     this.start = new Date(start.getTime());
     this.end = new Date(end.getTime);
@@ -75,6 +92,7 @@ end.setYear(78);
         throw new  IllegalArgumentException (start + "after" + end);
     }
 }
+
 ```
 
 - **在构造函数中，如是可变域的参数可以被不可信任方子类化，请不要使用clone方法进行保护性拷贝**
@@ -82,6 +100,7 @@ end.setYear(78);
  **那么就不要使用clone方法，而应当手动完成静态工厂，手动复制构造函数**
 
 ```java
+
 public class A {
     public static A copy(A a) {
         //静态工厂
@@ -273,7 +292,6 @@ public class A {
  ```
 
 ## 慎用可变参数
-
 
 - **可变参数接受0个或者多个指定类型的参数**，**可变参数机制通过先创建一个数组**，数组的大小为在调用位置所传递的参数数量，
  然后将参数值传到数组中，**最后将数组传递给方法**
