--- a/java/effective java/07_异常.md
+++ b/java/effective java/07_异常.md
@@ -1,5 +1,23 @@
 # 异常
 
+- [只针对异常的情况才使用异常](#只针对异常的情况才使用异常)
+    - [状态测试](#状态测试)
+- [对于可恢复的情况使用受检异常，对于编程错误使用运行时异常](#对于可恢复的情况使用受检异常对于编程错误使用运行时异常)
+    - [异常的分类](#异常的分类)
+    - [具体使用](#具体使用)
+- [避免不必要的使用受检的异常](#避免不必要的使用受检的异常)
+- [优先使用标准的异常](#优先使用标准的异常)
+    - [使用标装异常的好处](#使用标装异常的好处)
+    - [常用的标准异常](#常用的标准异常)
+- [抛出与抽象相对应的异常](#抛出与抽象相对应的异常)
+- [每个方法抛出的异常都应当有文档](#每个方法抛出的异常都应当有文档)
+- [在细节消息中包含能捕获失败的信息](#在细节消息中包含能捕获失败的信息)
+- [努力保持失败的原子性](#努力保持失败的原子性)
+    - [可变对象的失败原子性](#可变对象的失败原子性)
+    - [总结](#总结)
+- [不要忽略异常](#不要忽略异常)
+
+
 ## 只针对异常的情况才使用异常
 
 * 在现代jvm实现上，基于异常的模式比标准模式要慢很多
