部分设计模式 uml

--- a/other/design-pattern/02 模板方法.md
+++ b/other/design-pattern/02 模板方法.md
@@ -7,6 +7,8 @@
   不同的子类可以以不同的方式实现这些抽象方法，从而对剩余的逻辑有不同的实现
 * 模板模式的关键是：**子类可以置换掉父类的可变部分，但是子类却不可以改变模板方法所代表的顶级逻辑。**
 
+![templateMethod](/image-resources/designpattern/templateMethod.png)
+
 ## 使用
 
 * **模板方法一般与钩子函数一起使用**
@@ -54,6 +56,3 @@ public class ConcreteTemplate extends AbstractTemplate{
     }
 }
 ```
-
-
-
