--- a/other/design-pattern/03 策略模式.md
+++ b/other/design-pattern/03 策略模式.md
@@ -5,6 +5,8 @@
 - 策略模式是一种对象的行为模式。
 - **定义了算法族，分别封装起来，让它们之间可以互相替换**，此模式让算法的变化独立于使用算法的客户
 
+![strategy](/image-resources/designpattern/strategy.png)
+
 ```java
 // 抽象策略类
 public interface Strategy {
