--- a/other/design-pattern/14 组合模式.md
+++ b/other/design-pattern/14 组合模式.md
@@ -5,6 +5,8 @@
 - 合成模式属于对象的结构模式，有时又叫做“部分——整体”模式。
 - 合成模式将对象组织到树结构中，可以用来描述整体与部分的关系。合成模式可以使客户端将单纯元素与复合元素同等看待
 
+![组合模式](/image-resources/designpattern/组合模式.png)
+
 ## 具体使用
 
 - 组合包含组件，组件分为：组合和叶节点元素
