--- a/other/design-pattern/16 装饰者模式.md
+++ b/other/design-pattern/16 装饰者模式.md
@@ -7,6 +7,8 @@
 - 装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任。换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同。
  装饰模式可以在不使用创造更多子类的情况下，将对象的功能加以扩展。
 
+ ![装饰者模式](/image-resources/designpattern/装饰者模式.png)
+
 ```java
 public class A {
     void f();
